--- a/src/pages/Blob.css
+++ b/src/pages/Blob.css
@@ -14,17 +14,60 @@
   
   .blob {
     background-color: white;
-    height: 100%;
-    aspect-ratio: 1;
+    height: 100vh;
+    /* aspect-ratio: 1; */
+    width: 100vw;
     position: absolute;
     left: 50%;
-    top: 50%;
-    translate: -50% -50%;
-    border-radius: 50%;
+    top: 30%;
+    translate: -50% -50%;@keyframes rotate {
+      from {
+        rotate: 0deg;
+      }
+      
+      50% {
+        scale: 1 1.5;
+      }
+      
+      to {
+        rotate: 360deg;
+      }
+    }
+    
+    .blob {
+      background-color: white;
+      height: 100vh;
+      /* aspect-ratio: 1; */
+      width: 100vw;
+      position: absolute;
+      left: 50%;
+      top: 30%;
+      translate: -50% -50%;
+      border-radius: 0%;
+      background: linear-gradient(to right, rgb(94, 3, 3), rgb(107, 0, 59));
+      animation: rotate 20s infinite;
+      opacity: 0.8;
+      /* filter: blur(10vmax); */
+    }
+    
+    .blur {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: 1;
+      backdrop-filter: blur(12vmax);
+    }
+  
+   @media only screen  and (max-width: 700px) {
+    .blob{
+      height: 45%;
+    }
+   } 
+    border-radius: 30%;
     background: linear-gradient(to right, rgb(94, 3, 3), rgb(107, 0, 59));
-    animation: rotate 20s infinite;
+    /* animation: rotate 20s infinite; */
     opacity: 0.8;
-    filter: blur(10vmax);
+    filter: blur(6vmax);
   }
   
   .blur {
